<resources>
    <string name="app_name">建管通</string>
    <string name="app_version">1.0.0</string>
    <string name="app_start_page">专业的建筑查询、预算、投标方案平台</string>
    <string name="tab_one">首页</string>
    <string name="tab_two">消息</string>
    <string name="tab_three">个人</string>
    <string name="tab_four">Coffee</string>
    <string name="search_hint">搜索企业/资质/人员/业绩</string>
    <string name="fuzzy_search_hint">请输入您要查询的关键字</string>
    <string name="service_phone_number">客服电话：123 456 7890</string>
    <string name="title_activity_talent_pool">TalentPoolActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_project_select">ProjectSelectActivity</string>
    <string name="order_form">订单</string>
    <string name="order_receiving">接单</string>
    <string name="order_receiving_authentication">接单认证</string>
    <string name="integral">积分</string>
    <string name="collect">收藏</string>
    <string name="login">登录</string>
    <string name="open_login">点击开启登录吧！</string>
    <string name="message_notification">开启消息通知，可及时接受信息！</string>
    <string name="open">开启</string>
    <string name="chat">聊天</string>
    <string name="vip_open_hint">开通前，请先咨询客服</string>
    <string name="vip_open_hot_line">升级VIP热线：400–023–1221</string>
    <string name="vip">VIP</string>
    <string name="no_order_form_record">暂无订单记录</string>
    <string name="head_portrait">头像</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="person_data">个人资料</string>
    <string name="my_order_form">我的订单</string>
    <string name="no_cooperator">暂无合作单位</string>
    <string name="enable_integral">可使用积分：</string>
    <string name="member_information">会员信息</string>
    <string name="gain_integral">获取积分</string>
    <string name="integral_gain">积分获取</string>
    <string name="consume_record">消费记录</string>
    <string name="integral_rule">积分规则</string>
    <string name="my_integral">我的积分</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_company">重庆乾和建筑工程有限公司 Copyright @2017</string>
    <string name="period_of_validity">有效日期：</string>
    <string name="default_date">00–00–00</string>
    <string name="integral_gain_details">积分获取情况</string>
    <string name="modify_phone_number">修改手机号</string>
    <string name="push_setting">推送设置</string>
    <string name="bent_down">已关闭</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="log_out">退出登录</string>
    <string name="account_setting">账号设置</string>
    <string name="identity_authentication">身份认证</string>
    <string name="identity_authentication_hint">请上传本人手持身份证照片</string>
    <string name="identity_authentication_example">样例：</string>
    <string name="aptitude_query">资质查询</string>
    <string name="register_class_person">注册类人员</string>
    <string name="title_class_person">职称类人员</string>
    <string name="field_management_class_person">现场管理人员</string>
    <string name="confirm">确定</string>
    <string name="highway">公路</string>
    <string name="building_municipal">建筑市政</string>
    <string name="hydraulic">水利</string>
    <string name="water_transport">水运</string>
    <string name="park">园林</string>
    <string name="credit_condition">信誉状况</string>
    <string name="new_hot_spot">最新热点</string>
    <string name="name_input_hint">请输入真实姓名</string>
    <string name="please_choose">请选择</string>
    <string name="date_of_birth">出生年月</string>
    <string name="graduate_institution">毕业院校</string>
    <string name="please_input_graduate_institution">请输入您的毕业院校</string>
    <string name="please_choose_project">请选择工程</string>
    <string name="add_work_experience">添加工作经历</string>
    <string name="add_project_experience">添加项目经历</string>
    <string name="personal_description">个人说明</string>
    <string name="order_receiving_category">接单类别</string>
    <string name="skilled_field">擅长领域</string>
    <string name="next_step">下一步</string>
    <string name="work_resume">工作简历</string>
    <string name="company_name">公司名称</string>
    <string name="enterprise_name">企业名称</string>
    <string name="department">工作部门</string>
    <string name="position_name">职位名称</string>
    <string name="work_time">工作时间</string>
    <string name="work_content">工作内容</string>
    <string name="please_input_company_name">请输入公司名称</string>
    <string name="please_input_your_department">请输入所在部门</string>
    <string name="please_input_your_position">请输入职位名称</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="to">至</string>
    <string name="please_describe_the_content_of_your_work">请简述你所做工作的内容：</string>
    <string name="select_province_and_city">选择省市</string>
    <string name="enterprise_require">企业要求</string>
    <string name="legal_person_name">法人姓名</string>
    <string name="qualification_search_condition">资质条件</string>
    <string name="performance_search_condition">业绩条件</string>
    <string name="person_search_condition">人员条件</string>
    <string name="credit_search_condition">信誉条件</string>
    <string name="click_setting">点击设置</string>
    <string name="please_enter_a_enterprise_name_to_query">请输入要查询的企业名称</string>
    <string name="please_select_area_of_the_enterprise">请选择企业所在的位置</string>
    <string name="please_enter_the_legal_person_name_to_query">请输入要查询的法人姓名</string>
    <string name="unlimited">不限</string>
    <string name="ecdemic_enterprise">外地公司</string>
    <string name="local_enterprise">本地公司</string>
    <string name="立即查询">立即查询</string>
    <string name="register_class">注册类</string>
    <string name="title_class">职称类</string>
    <string name="manager_class">现场管理类</string>
</resources>