<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_divide"
    android:orientation="vertical"
    tools:context="com.anjile.shineourlove.rxjavaapplication.activity.JobResumeActivity">

    <include layout="@layout/include_top_status_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/item_text_vertical_margin"
        android:paddingTop="@dimen/item_text_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:text="@string/company_name"
            android:textColor="@color/black_word"
            android:textSize="@dimen/item_text_size" />

        <com.anjile.shineourlove.rxjavaapplication.view.NameEditText
            android:id="@+id/edt_job_resume_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@color/white"
            android:gravity="end"
            android:hint="@string/please_input_company_name"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_word"
            android:textColorHint="@color/gray_word_hint"
            android:textSize="@dimen/item_text_size" />
    </LinearLayout>

    <include layout="@layout/item_divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/item_text_vertical_margin"
        android:paddingTop="@dimen/item_text_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:text="@string/department"
            android:textColor="@color/black_word"
            android:textSize="@dimen/item_text_size" />

        <com.anjile.shineourlove.rxjavaapplication.view.NameEditText
            android:id="@+id/edt_job_resume_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@color/white"
            android:gravity="end"
            android:hint="@string/please_input_your_department"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_word"
            android:textColorHint="@color/gray_word_hint"
            android:textSize="@dimen/item_text_size" />
    </LinearLayout>

    <include layout="@layout/item_divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/item_text_vertical_margin"
        android:paddingTop="@dimen/item_text_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:text="@string/position_name"
            android:textColor="@color/black_word"
            android:textSize="@dimen/item_text_size" />

        <com.anjile.shineourlove.rxjavaapplication.view.FeedbackEditText
            android:id="@+id/edt_job_resume_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:maxLength="30"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@color/white"
            android:gravity="end"
            android:hint="@string/please_input_your_position"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_word"
            android:textColorHint="@color/gray_word_hint"
            android:textSize="@dimen/item_text_size" />
    </LinearLayout>

    <include layout="@layout/item_divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/item_text_vertical_margin"
        android:paddingTop="@dimen/item_text_vertical_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_weight="1"
            android:text="@string/work_time"
            android:textColor="@color/black_word"
            android:textSize="@dimen/item_text_size" />

        <TextView
            android:id="@+id/edt_job_resume_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@color/white"
            android:gravity="end"
            android:hint="@string/start_time"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_word"
            android:textColorHint="@color/gray_word_hint"
            android:textSize="@dimen/item_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:text="@string/to"
            android:textColor="@color/black_word"
            android:textSize="@dimen/item_text_size" />

        <TextView
            android:id="@+id/edt_job_resume_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@color/white"
            android:gravity="end"
            android:hint="@string/end_time"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_word"
            android:textColorHint="@color/gray_word_hint"
            android:textSize="@dimen/item_text_size" />
    </LinearLayout>

    <include layout="@layout/item_divide_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/item_text_vertical_margin"
        android:paddingEnd="0dp"
        android:paddingStart="@dimen/item_margin_left"
        android:paddingTop="@dimen/item_text_vertical_margin"
        android:text="@string/work_content"
        android:textColor="@color/black_word"
        android:textSize="@dimen/item_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="24dp">

        <com.anjile.shineourlove.rxjavaapplication.view.FeedbackEditText
            android:id="@+id/edt_job_resume_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/right_arrow_width"
            android:layout_marginStart="@dimen/item_margin_left"
            android:background="@drawable/radius_6_solid_gray"
            android:gravity="start|top"
            android:hint="@string/please_describe_the_content_of_your_work"
            android:minHeight="120dp"
            android:paddingBottom="16dp"
            android:paddingEnd="0dp"
            android:paddingStart="24dp"
            android:paddingTop="6dp"
            android:textColor="@color/gray_word"
            android:textColorHint="@color/gray_word_hint"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>
